[tool.poetry]
name = "users"
version = "0.1.0"
description = ""
authors = ["Etty <beltrami.ester@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
starlette = "^0.14.1"
uvicorn = "^0.13.3"
SQLAlchemy = "^1.3.22"
databases = "^0.4.1"
aiosqlite = "^0.16.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
